[gd_scene load_steps=24 format=2]

[ext_resource path="res://Boss/Body.png" type="Texture" id=1]
[ext_resource path="res://Sprite scenes/plants_1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprite scenes/plants_3.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprite scenes/mushroom_3.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprite scenes/mushroom_1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprite scenes/water_sausage.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprite scenes/plants_2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprite scenes/mushroom_2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprite scenes/mushroom_4.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprite scenes/area_2_broken_stone_tile_4.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprite scenes/area_2_broken_stone_tile_2.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprite scenes/area_2_broken_stone_tile_3.tscn" type="PackedScene" id=12]
[ext_resource path="res://Sprite scenes/area_2_broken_stone_tile_1.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sprites/Area 2 ruin wall with plants.png" type="Texture" id=14]
[ext_resource path="res://Character animation/Protector/hahmo_taka_idle_a.png" type="Texture" id=15]
[ext_resource path="res://Character animation/Fighter/hahmo_taka_idle_a.png" type="Texture" id=16]
[ext_resource path="res://Character animation/Healer/hahmo_taka_idle_a.png" type="Texture" id=17]
[ext_resource path="res://Character animation/Sorceress/hahmo_taka_a_idle.png" type="Texture" id=18]
[ext_resource path="res://PlayArea.gd" type="Script" id=19]
[ext_resource path="res://Tail.tscn" type="PackedScene" id=20]
[ext_resource path="res://Head.tscn" type="PackedScene" id=21]
[ext_resource path="res://Dragon.gd" type="Script" id=22]
[ext_resource path="res://Warning.tscn" type="PackedScene" id=23]

[node name="Node2D2" type="Node2D"]

[node name="Black" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayArea" type="Node2D" parent="."]
script = ExtResource( 19 )

[node name="Background" type="ColorRect" parent="PlayArea"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Broken tile A" parent="PlayArea/Background" instance=ExtResource( 13 )]
position = Vector2( 124.413, 202.204 )

[node name="Node2D" type="Node2D" parent="PlayArea/Background/Broken tile A"]
modulate = Color( 0.407843, 0.407843, 0.407843, 1 )

[node name="Mushroom D" parent="PlayArea/Background/Broken tile A/Node2D" instance=ExtResource( 9 )]
position = Vector2( -28.5463, -48.2315 )

[node name="Mushroom D2" parent="PlayArea/Background/Broken tile A/Node2D" instance=ExtResource( 9 )]
position = Vector2( 0.0441742, -7.02765 )

[node name="Mushroom D3" parent="PlayArea/Background/Broken tile A/Node2D" instance=ExtResource( 9 )]
position = Vector2( -21.8191, 51.8351 )

[node name="Broken tile B" parent="PlayArea/Background" instance=ExtResource( 11 )]
position = Vector2( 358.149, 241.16 )

[node name="Node2D" type="Node2D" parent="PlayArea/Background/Broken tile B"]
modulate = Color( 0.407843, 0.407843, 0.407843, 1 )

[node name="Mushroom D" parent="PlayArea/Background/Broken tile B/Node2D" instance=ExtResource( 9 )]
position = Vector2( -1.69141, -58.6274 )

[node name="Mushroom D2" parent="PlayArea/Background/Broken tile B/Node2D" instance=ExtResource( 9 )]
position = Vector2( 49.251, -33.1562 )

[node name="Mushroom D3" parent="PlayArea/Background/Broken tile B/Node2D" instance=ExtResource( 9 )]
position = Vector2( -33.905, 7.29813 )

[node name="Mushroom D4" parent="PlayArea/Background/Broken tile B/Node2D" instance=ExtResource( 9 )]
position = Vector2( -4.68802, 41.7592 )

[node name="Broken tile D" parent="PlayArea/Background" instance=ExtResource( 10 )]
position = Vector2( 857.086, 232.17 )

[node name="Node2D" type="Node2D" parent="PlayArea/Background/Broken tile D"]
modulate = Color( 0.407843, 0.407843, 0.407843, 1 )

[node name="Mushroom D" parent="PlayArea/Background/Broken tile D/Node2D" instance=ExtResource( 9 )]
position = Vector2( -11.3953, -49.5051 )

[node name="Mushroom D2" parent="PlayArea/Background/Broken tile D/Node2D" instance=ExtResource( 9 )]
position = Vector2( 38.3715, -32.4962 )

[node name="Mushroom D3" parent="PlayArea/Background/Broken tile D/Node2D" instance=ExtResource( 9 )]
position = Vector2( -27.1443, -1.62808 )

[node name="Broken tile C" parent="PlayArea/Background" instance=ExtResource( 12 )]
position = Vector2( 668.299, 233.668 )

[node name="Node2D" type="Node2D" parent="PlayArea/Background/Broken tile C"]
modulate = Color( 0.407843, 0.407843, 0.407843, 1 )

[node name="Mushroom D" parent="PlayArea/Background/Broken tile C/Node2D" instance=ExtResource( 9 )]
position = Vector2( 26.8309, 39.0809 )

[node name="Mushroom D2" parent="PlayArea/Background/Broken tile C/Node2D" instance=ExtResource( 9 )]
position = Vector2( -7.81696, -32.7345 )

[node name="YSort" type="YSort" parent="PlayArea/Background"]
modulate = Color( 0.572549, 0.403922, 0.392157, 1 )

[node name="Water sausage2" parent="PlayArea/Background/YSort" instance=ExtResource( 6 )]
position = Vector2( 57.5257, 610.955 )

[node name="Plants B" parent="PlayArea/Background/YSort" instance=ExtResource( 7 )]
position = Vector2( 64.5967, 581.257 )

[node name="Plants C" parent="PlayArea/Background/YSort" instance=ExtResource( 3 )]
position = Vector2( 898.895, 580.087 )

[node name="Mushroom A" parent="PlayArea/Background/YSort" instance=ExtResource( 5 )]
position = Vector2( 274.634, 540.545 )

[node name="Mushroom A2" parent="PlayArea/Background/YSort" instance=ExtResource( 5 )]
position = Vector2( 786.115, 525.073 )

[node name="Mushroom B" parent="PlayArea/Background/YSort" instance=ExtResource( 8 )]
position = Vector2( 898.788, 436.759 )

[node name="Mushroom B2" parent="PlayArea/Background/YSort" instance=ExtResource( 8 )]
position = Vector2( 293.505, 440.588 )

[node name="Mushroom C" parent="PlayArea/Background/YSort" instance=ExtResource( 4 )]
position = Vector2( 232.807, 453.208 )

[node name="Mushroom C2" parent="PlayArea/Background/YSort" instance=ExtResource( 4 )]
position = Vector2( 739.425, 431.514 )

[node name="Plants A" parent="PlayArea/Background/YSort" instance=ExtResource( 2 )]
position = Vector2( 128.236, 571.357 )

[node name="Plants A2" parent="PlayArea/Background/YSort" instance=ExtResource( 2 )]
position = Vector2( 1021.66, 571.863 )

[node name="Plants B2" parent="PlayArea/Background/YSort" instance=ExtResource( 7 )]
position = Vector2( 969.461, 588.024 )

[node name="Water sausage" parent="PlayArea/Background/YSort" instance=ExtResource( 6 )]
position = Vector2( 964.037, 599.642 )

[node name="Ceiling" type="Node2D" parent="PlayArea/Background"]
modulate = Color( 0.133333, 0.164706, 0.176471, 1 )

[node name="Area 2 ruin wall with plants" type="Sprite" parent="PlayArea/Background/Ceiling"]
position = Vector2( 87.0446, 46.8443 )
rotation = 3.14159
texture = ExtResource( 14 )

[node name="Area 2 ruin wall with plants2" type="Sprite" parent="PlayArea/Background/Ceiling"]
position = Vector2( 274.496, 56.9464 )
rotation = 3.14159
texture = ExtResource( 14 )

[node name="Area 2 ruin wall with plants3" type="Sprite" parent="PlayArea/Background/Ceiling"]
position = Vector2( 454.09, 30.0074 )
rotation = 3.14159
texture = ExtResource( 14 )

[node name="Area 2 ruin wall with plants4" type="Sprite" parent="PlayArea/Background/Ceiling"]
position = Vector2( 641.541, 40.1095 )
rotation = 3.14159
texture = ExtResource( 14 )

[node name="Area 2 ruin wall with plants5" type="Sprite" parent="PlayArea/Background/Ceiling"]
position = Vector2( 808.986, 31.8951 )
rotation = 3.14159
texture = ExtResource( 14 )

[node name="Area 2 ruin wall with plants6" type="Sprite" parent="PlayArea/Background/Ceiling"]
position = Vector2( 996.438, 41.9972 )
rotation = 3.14159
texture = ExtResource( 14 )

[node name="Dragon" type="Node2D" parent="PlayArea"]
script = ExtResource( 22 )

[node name="Body" type="Sprite" parent="PlayArea/Dragon"]
position = Vector2( 513.066, 172.18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Head" parent="PlayArea/Dragon" instance=ExtResource( 21 )]
position = Vector2( 381.654, 214.678 )
scale = Vector2( 2, 2 )

[node name="Head2" parent="PlayArea/Dragon" instance=ExtResource( 21 )]
position = Vector2( 417.745, 122.236 )
scale = Vector2( 2, 2 )

[node name="Head3" parent="PlayArea/Dragon" instance=ExtResource( 21 )]
position = Vector2( 568.161, 111.615 )
scale = Vector2( 2, 2 )

[node name="Head4" parent="PlayArea/Dragon" instance=ExtResource( 21 )]
position = Vector2( 621.359, 172.761 )
scale = Vector2( 2, 2 )

[node name="Tail" parent="PlayArea/Dragon" instance=ExtResource( 20 )]
position = Vector2( 311.745, 368.503 )
scale = Vector2( 2, 2 )

[node name="Warning" parent="PlayArea/Dragon" instance=ExtResource( 23 )]
position = Vector2( 365.976, 228.763 )
scale = Vector2( 2, 2 )

[node name="Warning2" parent="PlayArea/Dragon" instance=ExtResource( 23 )]
position = Vector2( 403.715, 134.765 )
scale = Vector2( 2, 2 )

[node name="Warning3" parent="PlayArea/Dragon" instance=ExtResource( 23 )]
position = Vector2( 552.632, 123.978 )
scale = Vector2( 2, 2 )

[node name="Warning4" parent="PlayArea/Dragon" instance=ExtResource( 23 )]
position = Vector2( 605.609, 187.731 )
scale = Vector2( 2, 2 )

[node name="Peeps" type="Node2D" parent="PlayArea"]
position = Vector2( 170, 0 )

[node name="hahmo_taka_idle_a" type="Sprite" parent="PlayArea/Peeps"]
position = Vector2( 209.581, 527.514 )
texture = ExtResource( 16 )

[node name="hahmo_taka_idle_a2" type="Sprite" parent="PlayArea/Peeps"]
position = Vector2( 305.597, 532.218 )
texture = ExtResource( 17 )

[node name="hahmo_taka_idle_a3" type="Sprite" parent="PlayArea/Peeps"]
position = Vector2( 394.321, 522.779 )
texture = ExtResource( 15 )

[node name="hahmo_taka_a_idle" type="Sprite" parent="PlayArea/Peeps"]
position = Vector2( 500.035, 524.667 )
texture = ExtResource( 18 )

[connection signal="animation_finished" from="PlayArea/Dragon/Head" to="PlayArea/Dragon" method="_on_Head4_animation_finished"]
[connection signal="animation_finished" from="PlayArea/Dragon/Head2" to="PlayArea/Dragon" method="_on_Head2_animation_finished"]
[connection signal="animation_finished" from="PlayArea/Dragon/Head3" to="PlayArea/Dragon" method="_on_Head3_animation_finished"]
[connection signal="animation_finished" from="PlayArea/Dragon/Head4" to="PlayArea/Dragon" method="_on_Head_animation_finished"]
[connection signal="animation_finished" from="PlayArea/Dragon/Tail" to="PlayArea/Dragon" method="_on_Tail_animation_finished"]
